feat: first curated passport collections
